--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
     font-weight: 900;
     background-color: chartreuse;
     width: 100%;
+    cursor: pointer;
 }
 #info{
     background-color: rgb(66, 0, 128);
@@ -84,6 +85,7 @@ body {
     border: 3px double black;
     font-weight: 900;
     background-color: rgb(231, 56, 56);
+    cursor: pointer;
 }
 #todolist{
     min-height: 60px;
@@ -117,6 +119,7 @@ body {
     border: 2px solid black;
     margin: 0px 2px 0px 2px;
     height: min-content;
+    cursor: pointer;
 }
 .done{
     background-color: seagreen;
